# kpipes

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml
ci/: before_deploy.sh  before_install.sh  install_cross_config.sh  script.sh
ci/cross/: Cross-base.toml  Cross-qt.toml
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu-qt/: Dockerfile
kpipes-core/: Cargo.toml
kpipes-core/src/: color.rs  direction.rs  flow.rs  lib.rs  main.rs  messages.rs  render_context.rs  spaces.rs
kpipes-core/src/render/: buffer.rs  camera.rs  instance.rs  instance_manager.rs  lighting.rs  mesh.rs  mod.rs  shader.frag.wgsl  shader.vert  shader.vert.wgsl  shader.wgsl  texture.rs  util.rs  vertex.rs
kpipes-desktop/: Cargo.toml
kpipes-desktop/src/: convert.rs  flow.rs  main.rs
kpipes-qt/kpipes-qt-build/: Cargo.toml
kpipes-qt/kpipes-qt-build/src/: main.rs
kpipes-qt/kpipes-qt-cpp/: CMakeLists.txt
kpipes-qt/kpipes-qt-cpp/src/: lib.cpp
kpipes-qt/kpipes-qt-rust/: Cargo.toml  build.rs
kpipes-qt/kpipes-qt-rust/src/: lib.rs
src/: direction.rs  flow.rs  main.rs  render.rs  shader.frag.glsl  shader.frag.spv  shader.vert.glsl
src/render/: buffer.rs  camera.rs  instance.rs  instance_manager.rs  lighting.rs  mesh.rs  mod.rs  shader.frag.glsl  shader.frag.spv  shader.vert.glsl  shader.vert.spv  texture.rs  uniforms.rs  vertex.rs
