[package]
name = "kpipes-core"
version = "0.1.0"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "^0.5.1"
bytemuck = "^1.2.0"
cgmath = "^0.17.0"
enum-iterator = "^0.6.0"
futures = "^0.3.5"
#lazy_static = "^1.4.0"
log = "^0.4.11"
rand = "^0.7.3"
tobj = "^2.0.2"
wgpu = "^0.5.2"
